kustomize/overlays/pinger-jaeger/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinger
  labels:
    app.kubernetes.io/name: pinger
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pinger
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pinger
    spec:
      containers:
      - name: pinger
        image: docker.io/vfarcic/silly-demo:1.1.4
        ports:
          - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
