kustomize/overlays/pinger-jaeger/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: pinger
  labels:
    app.kubernetes.io/name: pinger
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: pinger
