kustomize/overlays/pinger-jaeger/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinger
  labels:
    app.kubernetes.io/name: pinger
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: pinger
                port:
                  number: 8080
      host: pinger.127.0.0.1.nip.io
